dialog flicker fix

--- a/app/src/shared/controls/dialog/dialog.component.scss
+++ b/app/src/shared/controls/dialog/dialog.component.scss
@@ -1,3 +1,7 @@
+:host {
+  display: unset;
+}
+
 .dialog-bg {
   position: fixed;
   top: 0;
