--- a/app/src/styles.scss
+++ b/app/src/styles.scss
@@ -120,3 +120,6 @@ a {
     padding-bottom: 12px;
   }
 }
+awd-dialog {
+  display: none;
+}
